styles/negative.css
/* Typography imported from Google Fonts */
@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro:200,400');

/* Generic styles */
* {
  opacity: 0.9;
}
a {
  background-color: #00a4a6;
  text-decoration: none;
  color: white;
  border-radius: .25rem;
  text-align: left;
  display: inline-block;
  transition: all .3s;
}

a:hover {
  opacity: .6;
}


/*--------Styles for header and nav section----------*/
header {
  background-color: #00a4a6;
  width: 100%;
  line-height: 1px;
  position: fixed;
  top: 0;
}

.logo {
  color: #fff;
  padding: 50px 0 30px 80px;
  font-weight: bold;
  font-size: 30px;
  text-align: left;

}


.main_nav {
  display: flex;
  justify-content: flex-end;
  list-style: none;
}

.main_nav li {
  margin-right: 60px;
  margin-bottom: 30px;
}

#nav {
  text-decoration: none;
  font-size: 28px;
  color: rgba(255, 255, 255, 1);
}

.main_nav li a {
  text-decoration: none;
  font-size: 28px;
  color: rgba(255, 255, 255, 1);

}

.main_nav li a:hover {
  color: rgba(255, 255, 255, 0.7);
}



/*--------Styles for footer----------*/


footer {
  background-color: #00a4a6;
  color: rgba(255, 255, 255, 1);
  height: 230px;
  position: relative;
}

footer .footer_container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  line-height: 30px;
  padding: 20px;
  margin-left: 200px;
}

footer .footer_container ul li {
  list-style: none;
}

footer .footer_container ul li a {
  text-decoration: none;
  color: rgba(255, 255, 255, 1);
  font-size: 1.2em;
  font-weight: bold;
}

footer .footer_bottom {
  background-color: #064f50;
  width: 100%;
  height: 50px;
  text-align: center;
  position: absolute;
  bottom: 0;
  left: 0%;
  padding: 5px;

}

footer section h4 {
  display: none;
}



/* Styles for the hero image */

.hide_article {
  display: none;
}

.hero {
  /* Photo from Adobe Stock */
  background: url('../images/akesha_banner.jpeg') center;
  background-size: cover;
  padding: 6rem 4rem;
  /* grid styles */
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
  align-items: center;
  margin-top: 150px;
  
}

.hero > * {
  color: white;
}

.hero > h1 {
  font-size: 4rem;
  padding-bottom: 1rem;
}

.hero > article > p {
  font-size: 1.5rem;
  font-weight: 200;
}

.hero > article > a {
  padding: 1rem;
  margin-top: .75rem;
}
/*  SECTIONS  ============================================================================= */

.section-group {
  margin: 20px 200px;
}

.section {
	clear: both;
	padding: 0px;
	margin: 0px;
}

.group:before,
.group:after {
    content:"";
    display:table;
}
.group:after {
    clear:both;
}


/* challenges styles */
.challenges {
  padding: 2rem;
}

.challenges > ul {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  grid-gap: 1rem;
}

.challenges > ul > li {
  border: 1px solid #00a4a6;
  border-radius: .5rem;
}

.challenges > ul > li > figure {
  max-height: 220px;
  overflow: hidden;
  border-top-left-radius: .5rem;
  border-top-right-radius: .5rem;
  position: relative;
  z-index: -1;
}

.challenges > ul > li > figure > img {
  width: 100%;
}

.challenges > ul > li > figure > figcaption {
  position: absolute;
  bottom: 0;
  background-color: rgba(0,0,0,.7);
  width: 100%;
}

.challenges > ul > li > figure > figcaption > h3 {
  color: white;
  padding: .75rem;
  font-size: 1.25rem;
}

.challenges > ul > li > p {
  font-size: 1rem;
  line-height: 1.5;
  padding: 1rem .75rem;
  color: #00a4a6;
}

.challenges > ul > li > a {
  padding: .5rem 1rem;
  margin: .5rem;
}

/*------media queries---------*/
@media screen and (max-width: 800px) {

    header {
        position: relative;
        height: 200px;
        width: 100%;
    }

  
    .main_nav {
        display: grid;
        grid-template-columns: 1fr repeat(3, 1fr);
        justify-content: center;
        justify-items: center;
        padding-left: 80px;
        white-space: nowrap;
    }
	.hero {
		display: block;
	}
	
	.hero > h1 {
  		font-size: 3rem;
  }



    .fullwidth {
        align-content: center;
        grid-column: 1/4;
    }

    footer .footer_container {
        margin-left: 7rem;
    }

    footer {
        font-size: 70%;
        list-style: none;
    }

}


@media screen and (max-width: 600px) {

    header {
        height: 250px;
        width: 100%;
    }

 .main_nav {
        display: block;
    }

    footer {
        font-size: 50%;
    }

    footer .footer_container {
        margin-left: 5rem;
    }
}

